--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>Dolby Realtime 360 VR Player based on Babylon JS</title>
+ <style>
+  background: url(dolby2.png);
+  background-repeat: no-repeat;
+  background-size: auto;
+</style>
 <script>
 let params     = new URLSearchParams(document.location.search.substring(1));
 // SubscribingToken - placed here for ease of test	
