--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ function startPlayer(){
 var accountId = document.getElementById("viewTxt").value;
 var streamName = document.getElementById("streamTxt").value;
 //var subToken = document.getElementById("subToken").value;
- var url = "https://rnkvogel.github.io/dolby360-VR/360-VR/?id=" +  streamName + "&account=" + accountId;
- window.open(url);
+ var url = "https://rnkvogel.github.io/dolby360-VR/360-VR/?streamId="+accountId+"/"+streamName;
+ window.open(url);=
  }
 
 </script>
