--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Dolby Realtime 360 VR Player based on Babylon JS</title>
  <style>
-  background: url(https://rnkvogel.github.io/dolby360-VR/dolby2.png);
+  background: url(dolby2.png);
   background-repeat: no-repeat;
   background-size: auto;
 </style>
