--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ var streamName = document.getElementById("streamTxt").value;
  </head>
 <body>
  <H1>Dolby Realtime Streaming 360/VR Player</H1>
- Please input our stream name and account id information. Secure token is not enabled in demo.
+<h3>Please input our stream name and account id information. Secure token is not enabled in demo.</h3>
 <div id="form" class="account-data">
 <input id="tokenTxt" class="base-input" type="text" value="" placeholder="Secure Token" />
 <input id="viewTxt" class="base-input" type="text" value="" placeholder="Account Id"/>
