--- a/360-VR/index.html
+++ b/360-VR/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>360 Viewer</title>
+    <title>Dolby.io OptiView 360 Viewer</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babylonjs/4.0.3/babylon.js"></script>
     <link rel="stylesheet" href="css/viewer.css">
