--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ var streamName = document.getElementById("streamTxt").value;
 </script>
  </head>
 <body>
- <H1>Dolby Realtime Streaming 360/VR Player</H1>
+ <H1>Dolby.io OptiVeiw Realtime Streaming 360/VR Player</H1>
 <h3>Please input our stream name and account id information. Secure token is not enabled in demo.</h3>
 <div id="form" class="account-data">
 <input id="tokenTxt" class="base-input" type="text" value="" placeholder="Secure Token/Not required" />
